<resources>
    <string name="app_name">UberApp</string>
    <string name="nome">Digite seu Nome</string>
    <string name="email">Digite seu email</string>
    <string name="senha">Digite sua senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueciSenha">Esqueci minha senha</string>
    <string name="cadastro">Cadastrar</string>
    <string name="perfil">Perfil</string>
    <string name="voltar">Voltar</string>

    <string name="nomeUsuario">Flavio Caruso</string>
    <string name="emailUsuario">flavio.caruso3105@gmail.com</string>
</resources>