<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="center_vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:paddingTop="10dp"
        android:id="@+id/titulo"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:paddingBottom="26dp"
        />

    <EditText
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo"
        android:hint="@string/nome" />
    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nome"
        android:hint="@string/senha" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/senha"
        android:text="@string/esqueciSenha"
        android:paddingTop="10dp"
        android:layout_alignParentLeft="true"
        />
    <Button
        android:layout_height="wrap_content"
        android:layout_below="@id/senha"
        android:layout_width="96dp"
        android:layout_alignParentRight="true"
        android:text="@string/entrar"/>

</RelativeLayout>