<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="center_vertical"
    tools:context=".CadastroActivity">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/app_name"
      android:paddingTop="10dp"
      android:id="@+id/titulo"
      android:gravity="center_horizontal"
      android:textSize="30dp"
      android:paddingBottom="16dp"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/cadastro"
      android:id="@+id/cadastro"
      android:gravity="center_horizontal"
      android:textSize="18dp"
      />
  <EditText
      android:id="@+id/nome"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="10dp"
      android:hint="@string/nome" />
  <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="10dp"
      android:hint="@string/email" />
  <EditText
      android:id="@+id/senha"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="10dp"
      android:hint="@string/senha" />
  <Button
      android:layout_height="wrap_content"
      android:layout_below="@id/senha"
      android:layout_width="match_parent"
      android:layout_alignParentRight="true"
      android:text="@string/cadastro"/>

  </LinearLayout>